# pdfencrypt

./: .gitignore  pdfencrypt.py  pdfencrypt.spec  pyproject.toml
