[tool.poetry]
name = "pdfkrypt"
version = "0.1.0"
description = "program for å kryptere pdf'er"
authors = ["Marius Gjerde <marius@mgjerde.no>"]

[tool.poetry.dependencies]
python = "^3.10"
PyPDF3 = "^1.0.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
